# Rust-vs-Javascript

./: README.MD
js/: index.js  package-lock.json  package.json
rust/: Cargo.toml
rust/src/: main.rs  module.rs
